--- a/src/components/_start.html
+++ b/src/components/_start.html
@@ -1,39 +1,26 @@
 <aside class="start">
-  <div class="content-width">
-    <div class="start__bg">
-      <div class="start__flex">
-        <h3 class="start__title">С чего начать внедрение Lean</h3>
-        <div class="start__column column-start">
-          <div class="column-start__column">
-            <div class="column-start__flex">
-              <div class="column-start__img-wrap">
-                <img src="assets/img/training.png" width="60px" alt="" class="column-start__img">
-              </div>
-              <h4 class="column-start__title title-1">Ознакомительный тренинг</h4>
-              <div class="column-start__text text-start">Во время однодневного тренинга ваши сотрудники познакомятся с методолгией и основными инструментами Lean. Также это поможет подготовиться к старту полноценного проекта по <br> Lean-трансформации. </div>
-            </div>
-          </div>
-          <div class="column-start__column">
-            <div class="column-start__flex">
-              <div class="column-start__img-wrap img-invalid">
-                <img src="assets/img/transformation.png" width="66px" alt="" class="column-start__img">
-              </div>
-              <h4 class="column-start__title title-1">Мини-трансформация</h4>
-              <div class="column-start__text text-start">За короткий срок сможете оценить преимущества системы Lean. Мы выявляем проблему вашей компании и при помощи инструментов Lean решаем её за<br> 3-5 рабочих дней, получая первые результаты.</div>
-            </div>
-          </div>
-          <div class="column-start__column">
-            <div class="column-start__flex">
-              <div class="column-start__img-wrap">
-                <img src="assets/img/project.png" width="60px" alt="" class="column-start__img">
-              </div>
-              <h4 class="column-start__title title-1">Проект по сопровождению</h4>
-              <div class="column-start__text text-start">Полноценный проект по сопровождению вашей компании на пути Lean-трансформации. Cоздание Lean культуры, для того чтобы увлечь, замотировать   сотрудников самостоятельно внедрять улучшения.</div>
-            </div>
-          </div>
-        </div>
-        <a href="" class="start__link button-yellow">Сделать первый шаг</a>
-      </div>
+  <h3 class="start__title">С чего начать внедрение Lean</h3>
+
+  <div class="start__body start-columns">
+    <div class="start-columns__item">
+      <div class="start-columns__img start-columns__img-1"></div>
+      <h4 class="start-columns__title">Ознакомительный тренинг</h4>
+      <p class="start-columns__text">Во время однодневного тренинга ваши сотрудники познакомятся с методолгией и основными инструментами Lean. Также это поможет подготовиться к старту полноценного проекта по Lean-трансформации.</p>
+    </div>
+    
+    <div class="start-columns__item">
+      <div class="start-columns__img start-columns__img-2"></div>
+      <h4 class="start-columns__title">Мини-трансформация</h4>
+      <p class="start-columns__text">За короткий срок сможете оценить преимущества системы Lean. Мы выявляем проблему вашей компании и при помощи инструментов Lean решаем её за 3-5 рабочих дней, получая первые результаты.</p>
+    </div>
+    
+    <div class="start-columns__item">
+      <!-- <img class="column-start__img" src="assets/img/project.png" alt=""> -->
+      <div class="start-columns__img start-columns__img-3"></div>
+      <h4 class="start-columns__title">Проект по сопровождению</h4>
+      <p class="start-columns__text">Полноценный проект по сопровождению вашей компании на пути Lean-трансформации. Cоздание Lean культуры, для того чтобы увлечь, замотировать сотрудников самостоятельно внедрять улучшения.</p>
     </div>
   </div>
-<aside/>
+
+  <a class="start__link button-yellow" href="">Сделать первый шаг</a>
+</aside>
