--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,8 +14,10 @@
   'components/button_yellow',
   'components/use_item',
   'components/use-arrow',
+  'components/sales_arrow',
   'components/backgrounds',
   'components/navigation',
+  'components/start-columns',
   'components/title_section',
   'components/wrappers';
 
