--- a/src/style/components/_wrappers.scss
+++ b/src/style/components/_wrappers.scss
@@ -35,3 +35,20 @@
     max-width: 100%;
   }
 }
+
+.content-without-breakpoint {
+  max-width: 1080px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.content-for-start {
+  max-width: 1080px;
+  padding: 0 20px;
+  margin: 0 auto;
+
+  @include respond-to('max-small') {
+    max-width: 100%;
+    padding: 0;
+  }
+}
