--- a/Lean-In/css/style.css
+++ b/Lean-In/css/style.css
@@ -171,7 +171,50 @@ h6 {
   padding: 0 0 70px 0;
 }
 
+.button-up {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 95px;
+  height: 85px;
+}
+
+.button-up__part-1 {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 53%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  background-image: url(../assets/img/svg/button_part_up.svg);
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.button-up__part-2 {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 76.5%;
+  display: block;
+  position: absolute;
+  top: auto;
+  left: auto;
+  bottom: 0;
+  right: 0;
+  background-image: url(../assets/img/svg/button_part_down.svg);
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .sales-arrow {
+  position: relative;
   margin-top: -1px;
   width: 0;
   border-top: 125px solid #f0fffd;
@@ -179,14 +222,12 @@ h6 {
   border-right: 50vw solid transparent;
 }
 
-.arrow-up-small {
+.sales-arrow__button {
   position: absolute;
   top: -130px;
   left: -47px;
-}
-
-.arrow-up-small__img {
-  width: 95px;
+  bottom: auto;
+  right: auto;
 }
 
 .indent-finance {
@@ -1717,6 +1758,21 @@ h6 {
     padding: 0 0 35px 0;
   }
 
+  .button-up {
+    margin: 0;
+    padding: 0;
+    width: 80px;
+    height: 70px;
+  }
+
+  .sales-arrow__button {
+    position: absolute;
+    top: -110px;
+    left: -40px;
+    bottom: auto;
+    right: auto;
+  }
+
   .navigation__burger {
     display: block;
     cursor: pointer;
@@ -2012,6 +2068,8 @@ h6 {
   }
 }
 @supports (-webkit-appearance:none){
+.button-up__part-1{background-image:url(../assets/img/svg/button_part_up.svg)}
+.button-up__part-2{background-image:url(../assets/img/svg/button_part_down.svg)}
 .start-columns__img-1{background-image:url("../assets/img/training.webp")}
 .start-columns__img-2{background-image:url("../assets/img/transformation.webp")}
 .start-columns__img-3{background-image:url("../assets/img/project.webp")}
