--- a/src/style/components/_sales_arrow.scss
+++ b/src/style/components/_sales_arrow.scss
@@ -1,6 +1,5 @@
-// assets/img/arrow_up.png
-
 .sales-arrow {
+  position: relative;
   margin-top: -1px;
   width: 0;
   border-top: 125px solid #f0fffd;
@@ -8,16 +7,13 @@
   border-right: $ab solid transparent;
 
   @include displayNone ('max-small');
-}
 
-.arrow-up-small {
+  &__button {
+    @include position (absolute, -130px, -47px);
 
-  position: absolute;
-  top: -130px;
-  left: -47px;
-
-  &__img {
-    width: 95px;
+    @include respond-to('max-medium') {
+      @include position (absolute, -110px, -40px);
+    }
   }
 }
 
