--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,6 +14,7 @@
   'components/button_yellow',
   'components/use_item',
   'components/use-arrow',
+  'components/button-up',
   'components/sales_arrow',
   'components/backgrounds',
   'components/navigation',
